[package]
name = "reudh"
version = "0.1.0"
authors = ["Ben Weedon <ben.weedon@outlook.com>"]
description = "A tool for parsing and indexing word etymologies from etymonline.com"
repository = "https://github.com/benweedon/reudh"
readme = "README.md"
keywords = ["crawler", "etymonline", "english", "linguistics"]
categories = ["parsing", "text-processing", "visualization"]
license = "GPL-3.0"

[badges]
travis-ci = { repository = "benweedon/reudh" }
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.1.18"
html5ever = "0.22.0"
hyper = "0.11.16"
hyper-tls = "0.1.2"
tokio-core = "0.1.12"
